# playground

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bootup.sh  docker-compose.yml
fsharp/: Dockerfile  Playground.sln
fsharp/PlaygroundApi/: PlaygroundApi.fsproj  Program.fs
fsharp/PlaygroundApi.Tests/: DomainTests.fs  PlaygroundApi.Tests.fsproj
fsharp/PlaygroundApi/Domain/: Railway.fs  Types.fs  Validation.fs
fsharp/PlaygroundApi/Examples/: ActivePatterns.fs  ComputationExpressions.fs  Pipeline.fs  (+1 more)
goffj/: Dockerfile  Makefile  go.mod  go.sum  main.go
goffj/cloud/: go.mod
goffj/cmd/: aws.go  az.go  init.go  realm.go  root.go  server.go  test.go  user.go  utils.go
goffj/core/: config.go  dbutils.go  message.go  models.go  nats.go  realm.go  user.go
goffj/grpc/: server.go
goffj/router/: apiv1.go  handlers.go  tapp.go  trealm.go  ttasks.go  tusers.go
infra/: README.md
infra/aws/: main.tf  terraform.tfvars.example  variables.tf
infra/azure/: main.tf  terraform.tfvars.example  variables.tf
infra/gcp/: main.tf  terraform.tfvars.example  variables.tf
pgctl/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
pgctl/src/: client.rs  config.rs  grpc_server.rs  main.rs  server.rs
playui/: Dockerfile  grpc_server.py  requirements.txt  start.sh
playui/pytorch/: asyncio_pipeline.py
playui/streamlit/: app.py
proto/: README.md  playground.proto
reactapp/: Dockerfile  nginx.conf  package.json  vite.config.ts
reactapp/src/: App.tsx  index.css  main.tsx
tsnode/: Dockerfile  package.json  tsconfig.json
tsnode/src/: server.ts
(+32 files in other folders)
